# symmetrical-chainsaw

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
.circleci/: config.yml
backend/: prod_craw.py
backend/ecomm/: db.sqlite3
backend/ecomm/comm_app/: apps.py  decorators.py  models.py  serialize.py  serializer.py  tests.py  urls.py  views.py
backend/ecomm/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/ecomm/ecomm/: settings.py  urls.py
backend/ecomm/products/: models.py  pagination.py  parser.py  populatedb.py  serializer.py  tests.py  urls.py  views.py
backend/ecomm/products/migrations/: 0001_initial.py  0002_alter_products_model_price.py  0003_auto_20210514_1120.py
backend/ecomm/users/: views.py
backend/ecomm/users/templates/users/: register.html
frontend/: next.config.js  package-lock.json  package.json
frontend/components/: Header.jsx  Protected.jsx  api.jsx  formField.jsx  loader.jsx  prodCard.jsx
frontend/components/Context/: Auth.jsx  Cart.jsx
frontend/pages/: _app.js  auth.js  cart.js  del.js  del_user.js  del_user.jsx  index.js  prd.js  prd.jsx  signin.js  signup.js
